# MetalArchived

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
common/: CMakeLists.txt
common/include/common/: camera.h  example.h  timer.h  utility.h  window.h
common/src/: camera.cpp  example.cpp  timer.cpp  utility.cpp  window.cpp
template/: CMakeLists.txt
template/src/: template.cpp
triangle/: CMakeLists.txt
triangle/asset/: pass_through.metal
triangle/src/: triangle.cpp
